README sadeleştirildi.